Adding gallery preview

--- a/karta.html
+++ b/karta.html
@@ -206,11 +206,11 @@ ISBN: 978-5-17-092966-5</span></br>
 <div class="backet"><a href="">В КОРЗИНУ</a></div>
 <div class="gallery">
 <ul>
-<li><a class="nav-img"><img src="images/01g.jpg" alt="01"/></a></li>
-<li><a class="nav-img"><img src="images/02g.jpg" alt="02"/></a></li>
-<li><a class="nav-img"><img src="images/03g.jpg" alt="03"/></a></li>
-<li><a class="nav-img"><img src="images/04g.jpg" alt="04"/></a></li>
-<li><a class="nav-img"><img src="images/05g.jpg" alt="05"/></a></li>
+<li><a class="nav-img"><img class="sm" src="images/1big.jpg" alt="01"/></a></li>
+<li><a class="nav-img"><img class="sm" src="images/2big.jpg" alt="02"/></a></li>
+<li><a class="nav-img"><img class="sm" src="images/3big.jpg" alt="03"/></a></li>
+<li><a class="nav-img"><img class="sm" src="images/4big.jpg" alt="04"/></a></li>
+<li><a class="nav-img"><img class="sm" src="images/5big.jpg" alt="05"/></a></li>
 </ul>
 
 </div>
